# sata_sim2real

./: LICENSE  README.md
.history/: README_20251017144209.md  README_20251017144217.md  README_20251017144221.md  README_20251017144224.md  README_20251017144225.md  README_20251017144229.md  README_20251017144234.md  README_20251017144238.md  README_20251017144245.md  README_20251017144250.md  README_20251017144252.md  README_20251017144303.md  README_20251017144306.md  README_20251017144339.md  README_20251017144341.md  README_20251017144347.md  README_20251017144350.md  README_20251017144418.md  README_20251017144430.md  README_20251017144432.md
.history/src/deploy_rl_policy/scripts/: rl_policy_20251017142840.py  rl_policy_20251017143343.py  rl_policy_20251017143352.py  rl_policy_20251017143741.py  rl_policy_20251017143743.py  rl_policy_20251017143832.py  rl_policy_20251017143834.py  rl_policy_20251017143953.py  rl_policy_20251017143955.py  xbox_command_20251017142840.py  xbox_command_20251017143628.py
.history/src/deploy_rl_policy/src/: low_level_ctrl_20251017142840.cpp  low_level_ctrl_20251017143047.cpp  low_level_ctrl_20251017143055.cpp  low_level_ctrl_20251017143058.cpp
base_velocity_estimator/: CMakeLists.txt  package.xml
base_velocity_estimator/config/: go2.yaml
base_velocity_estimator/include/base_velocity_estimator/: ekf_velocity_estimator.hpp  imu_velocity_estimator_node.hpp  kinematics_velocity_estimator_node.hpp
base_velocity_estimator/scripts/: mujoco_simulator.py  test.py
base_velocity_estimator/src/: ekf_velocity_estimator.cpp  imu_velocity_estimator_node.cpp  kinematics_velocity_estimator_node.cpp  main.cpp
deploy_RL_policy/: CMakeLists.txt  package.xml
deploy_RL_policy/configs/: go2.yaml
deploy_RL_policy/include/deploy_real/: low_level_ctrl.hpp
deploy_RL_policy/scripts/: RL_policy.py  config.py  mujoco_simulator.py  pinocchio_equilibrium.py
deploy_RL_policy/src/: low_level_ctrl.cpp
deploy_real/: CMakeLists.txt  package.xml
deploy_real/include/deploy_real/: low_level_ctrl.hpp
deploy_real/scripts/: config.py  mujoco_simulator.py  recieve_data.py  record_torque.py  test.py  xbox_command.py
deploy_real/src/: low_level_ctrl.cpp  low_level_ctrl_simulation.cpp  test1.cpp
docs/: index.html
resources/go2/: go2.xml  scene_terrain.xml
resources/policies/: HIM_policy.pt  policy_1.pt
src/deploy_RL_policy/configs/: go2.yaml
src/deploy_RL_policy/scripts/: RL_policy.py  config.py  mujoco_simulator.py
src/deploy_RL_policy/src/: low_level_ctrl.cpp
src/deploy_rl_policy/: CMakeLists.txt  package.xml
src/deploy_rl_policy/configs/: go2.yaml
src/deploy_rl_policy/include/deploy_real/: low_level_ctrl.hpp
src/deploy_rl_policy/scripts/: config.py  mujoco_simulator.py  record_torque.py  rl_policy.py  sata_config.py  sata_policy_loader.py  xbox_command.py
src/deploy_rl_policy/src/: low_level_ctrl.cpp
src/deploy_rl_policy/src/common/: motor_crc.cpp
