<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deploy_RL_policy</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jiabao.song@tum.de">song</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>unitree_go</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- <exec_depend>unitree_go</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
